infra/app-of-apps/frappe-hrms/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frappe-hrms
  namespace: frappe-hrms
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: https
  hostnames:
    - "hrms.brandwhisper.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frappe-hrms-erpnext
          port: 8080
